// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DiscussionComment > Show Basic 1`] = `
"<article data-v-49696bef="" class="flex gap-2 bg-white dark:bg-transparent border rounded-md p-2 mt-2">
  <div data-v-49696bef="" class="">
    <figure data-v-49696bef="" class=""><img data-v-49696bef="" class="rounded-xl" src="https://social.tcit.fr/system/accounts/avatars/000/000/001/original/a28c50ce5f2b13fd.jpg" alt="" width="48" height="48"></figure>
  </div>
  <div data-v-49696bef="" class="mb-2 pt-1 flex-1">
    <div data-v-49696bef="" class="flex items-center gap-1" dir="auto">
      <div data-v-49696bef="" class="flex flex-1 flex-col"><strong data-v-49696bef="">Thomas Citharel</strong><small data-v-49696bef="">@tcit</small></div><span data-v-49696bef="" class="icons"><div data-v-49696bef="" data-oruga="dropdown" class="o-dropdown o-dropdown--position-bottom-left" aria-role="list"><div class="o-dropdown__trigger" aria-haspopup="menu" aria-disabled="false" aria-controls="v-0"><span data-v-49696bef="" class="cursor-pointer material-design-icon dots-horizontal-icon cursor-pointer" aria-hidden="true" role="img"><svg fill="currentColor" class="material-design-icon__svg" width="24" height="24" viewBox="0 0 24 24"><path d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"><!--v-if--></path></svg></span>
    </div>
    <!--teleport start-->
    <!---->
    <transition-stub name="fade" appear="false" persisted="false" css="true">
      <div id="v-0" tabindex="-1" class="o-dropdown__menu o-dropdown__menu--bottom-left" role="menu" aria-hidden="true" style="display: none;">
        <div data-v-49696bef="" id="v-0-1" data-oruga="dropdown-item" data-id="dropdown-1" class="o-dropdown__item o-dropdown__item--clickable" role="menuitem" tabindex="-1" aria-disabled="false" aria-role="menuitem"><span data-v-49696bef="" data-oruga="icon" class="o-icon"><i class="mdi mdi-pencil mdi-24px"></i></span> Edit</div>
        <div data-v-49696bef="" id="v-0-2" data-oruga="dropdown-item" data-id="dropdown-2" class="o-dropdown__item o-dropdown__item--clickable" role="menuitem" tabindex="-1" aria-disabled="false" aria-role="menuitem"><span data-v-49696bef="" data-oruga="icon" class="o-icon"><i class="mdi mdi-delete mdi-24px"></i></span> Delete</div>
        <!--v-if-->
      </div>
    </transition-stub>
    <!--teleport end-->
  </div></span>
  <div data-v-49696bef="" class="self-center">
    <!--v-if-->
  </div>
  </div>
  <div data-v-49696bef="" class="text-wrapper" dir="auto">
    <div data-v-49696bef="" class="prose md:prose-lg lg:prose-xl dark:prose-invert">Hello there</div>
    <!--v-if-->
  </div>
  </div>
</article>
<!--teleport start-->
<transition-stub name="zoom-out" appear="false" persisted="false" css="true">
  <div has-modal-card="" close-button-aria-label="Close" data-oruga="modal" class="o-modal" tabindex="-1" role="dialog" aria-modal="false" style="display: none;">
    <div class="o-modal__overlay" tabindex="-1"></div>
    <div class="o-modal__content" style="max-width: 960px;">
      <div data-v-e0cceef3="" data-v-49696bef="" class="p-2">
        <header data-v-e0cceef3="" class="mb-3">
          <h2 data-v-e0cceef3="" class="text-2xl">Report this comment</h2>
        </header>
        <section data-v-e0cceef3="">
          <div data-v-e0cceef3="" class="flex gap-1 flex-row mb-3 bg-mbz-yellow dark:text-black p-3 rounded items-center"><span data-v-e0cceef3="" data-oruga="icon" class="o-icon o-icon--warning hidden md:block flex-1"><i class="mdi mdi-alert 48"></i></span>
            <p data-v-e0cceef3="">The report will be sent to the moderators of your instance. You can explain why you report this content below.</p>
          </div>
          <div data-v-e0cceef3="">
            <!--v-if-->
            <div data-v-e0cceef3="" data-oruga="field" class="o-field"><label id="v-3" for="additional-comments" class="o-field__label">Additional comments</label>
              <div data-v-e0cceef3="" data-oruga="input" class="o-input o-input--expanded o-input--textarea">
                <!----><textarea aria-labelledby="v-3" autofocus="" id="additional-comments" data-oruga-input="textarea" class="o-input__input o-input__input--placeholder"></textarea>
                <!---->
                <!---->
              </div>
              <!---->
            </div>
            <!--v-if-->
          </div>
        </section>
        <footer data-v-e0cceef3="" class="flex gap-2 py-3"><button data-v-e0cceef3="" data-oruga="button" type="button" role="button" tabindex="0" class="o-button o-button--outlined"><span class="o-button__wrapper"><!----><span class="o-button__label">Cancel</span>
            <!----></span>
          </button><button data-v-e0cceef3="" data-oruga="button" type="button" role="button" tabindex="0" class="o-button o-button--primary"><span class="o-button__wrapper"><!----><span class="o-button__label">Send the report</span>
            <!----></span>
          </button></footer>
      </div><button type="button" class="o-modal__close" aria-label="Close" data-oruga="close" style="display: none;"><span data-oruga="icon" class="o-icon o-icon--medium"><i class="mdi mdi-close mdi-36px"></i></span></button>
    </div>
  </div>
</transition-stub>
<!--teleport end-->"
`;

exports[`DiscussionComment > Show Deleted comment 1`] = `
"<article data-v-49696bef="" class="flex gap-2 bg-white dark:bg-transparent border rounded-md p-2 mt-2">
  <div data-v-49696bef="" class=""><span data-v-49696bef="" aria-hidden="true" class="material-design-icon account-circle-icon" role="img"><svg fill="currentColor" class="material-design-icon__svg" width="48" height="48" viewBox="0 0 24 24"><path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"><!--v-if--></path></svg></span></div>
  <div data-v-49696bef="" class="mb-2 pt-1 flex-1">
    <div data-v-49696bef="" class="flex items-center gap-1" dir="auto"><span data-v-49696bef="" class="name comment-link has-text-grey">[deleted]</span>
      <!--v-if-->
      <div data-v-49696bef="" class="self-center">
        <!--v-if-->
      </div>
    </div>
    <div data-v-49696bef="" class="comment-deleted">[This comment has been deleted by it's author]</div>
  </div>
</article>
<!--teleport start-->
<transition-stub name="zoom-out" appear="false" persisted="false" css="true">
  <div has-modal-card="" close-button-aria-label="Close" data-oruga="modal" class="o-modal" tabindex="-1" role="dialog" aria-modal="false" style="display: none;">
    <div class="o-modal__overlay" tabindex="-1"></div>
    <div class="o-modal__content" style="max-width: 960px;">
      <div data-v-e0cceef3="" data-v-49696bef="" class="p-2">
        <header data-v-e0cceef3="" class="mb-3">
          <h2 data-v-e0cceef3="" class="text-2xl">Report this comment</h2>
        </header>
        <section data-v-e0cceef3="">
          <div data-v-e0cceef3="" class="flex gap-1 flex-row mb-3 bg-mbz-yellow dark:text-black p-3 rounded items-center"><span data-v-e0cceef3="" data-oruga="icon" class="o-icon o-icon--warning hidden md:block flex-1"><i class="mdi mdi-alert 48"></i></span>
            <p data-v-e0cceef3="">The report will be sent to the moderators of your instance. You can explain why you report this content below.</p>
          </div>
          <div data-v-e0cceef3="">
            <!--v-if-->
            <div data-v-e0cceef3="" data-oruga="field" class="o-field"><label id="v-0" for="additional-comments" class="o-field__label">Additional comments</label>
              <div data-v-e0cceef3="" data-oruga="input" class="o-input o-input--expanded o-input--textarea">
                <!----><textarea aria-labelledby="v-0" autofocus="" id="additional-comments" data-oruga-input="textarea" class="o-input__input o-input__input--placeholder"></textarea>
                <!---->
                <!---->
              </div>
              <!---->
            </div>
            <!--v-if-->
          </div>
        </section>
        <footer data-v-e0cceef3="" class="flex gap-2 py-3"><button data-v-e0cceef3="" data-oruga="button" type="button" role="button" tabindex="0" class="o-button o-button--outlined"><span class="o-button__wrapper"><!----><span class="o-button__label">Cancel</span>
            <!----></span>
          </button><button data-v-e0cceef3="" data-oruga="button" type="button" role="button" tabindex="0" class="o-button o-button--primary"><span class="o-button__wrapper"><!----><span class="o-button__label">Send the report</span>
            <!----></span>
          </button></footer>
      </div><button type="button" class="o-modal__close" aria-label="Close" data-oruga="close" style="display: none;"><span data-oruga="icon" class="o-icon o-icon--medium"><i class="mdi mdi-close mdi-36px"></i></span></button>
    </div>
  </div>
</transition-stub>
<!--teleport end-->"
`;
